After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772996 - Assertion failure in show_search_results ( num > 0 )
Assertion failure in show_search_results ( num > 0 )
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.22.x
Other Linux
: Normal major
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-10-15 19:14 UTC by gnome.vrb
Modified: 2016-10-17 19:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Installing gstreamer libav plugin via rhythmbox. (33.89 KB, image/png)
2016-10-15 19:19 UTC, gnome.vrb
Details
Screenshot after bug fix. (15.90 KB, image/png)
2016-10-17 19:21 UTC, gnome.vrb
Details

Description gnome.vrb 2016-10-15 19:14:49 UTC


Thread 1 (Thread 0x7f66a4f19a80 (LWP 8132))

  • #0 __GI_raise
    at ../sysdeps/unix/sysv/linux/raise.c line 58
  • #1 __GI_abort
    at abort.c line 89
  • #2 g_assertion_message
  • #3 g_assertion_message_expr
    at ././glib/gtestutils.c line 2452
  • #4 show_search_results
    at gs-shell-extras.c line 444
  • #5 show_search_results
    at gs-shell-extras.c line 494
  • #6 get_search_what_provides_cb
    at gs-shell-extras.c line 659
  • #7 g_task_return_now
    at ././gio/gtask.c line 1121
  • #8 complete_in_idle_cb
    at ././gio/gtask.c line 1135
  • #9 g_main_context_dispatch
    at ././glib/gmain.c line 3201
  • #10 g_main_context_dispatch
    at ././glib/gmain.c line 3854
  • #11 g_main_context_iterate
    at ././glib/gmain.c line 3927
  • #12 g_main_context_iteration
    at ././glib/gmain.c line 3988
  • #13 g_application_run
    at ././gio/gapplication.c line 2381
  • #14 main
    at gs-main.c line 55

Comment 1 gnome.vrb 2016-10-15 19:19:58 UTC
Created attachment 337766 [details]
Installing gstreamer libav plugin via rhythmbox.

Tried installing a gstreamer plugin ( gstreamer1.0-libav ) via rhythmbox ( "Install additional software required to use this format" button ). It opened gnome-software, which crashed with assertion failure after a couple of seconds.
Comment 2 gnome.vrb 2016-10-15 19:33:54 UTC
Relevant rhythmbox log:

Rhythmbox-Message: Missing plugin: gstreamer|1.0|lt-rhythmbox|Apple Lossless Audio (ALAC) encoder|encoder-audio/x-alac
** Message: PackageKit: xid = 20971527
** Message: PackageKit: desktop_id = (null)
** Message: PackageKit: Codec nice name: Apple Lossless Audio (ALAC) encoder
** Message: PackageKit: structure: gstreamer1(encoder-audio/x-alac)()(64bit)
Comment 3 Richard Hughes 2016-10-17 09:08:52 UTC
commit d068f3a94fdd2ac30913be51f1ec7d8c4d5f81b3
Author: Richard Hughes <richard@hughsie.com>
Date:   Mon Oct 17 10:03:22 2016 +0100

    Fix an assert when a codec is not found
    
    When we can't find any results we now return an empty list rather than an error.
    Handle this in the various places that look for codecs to prevent a crash.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=772996

:100644 100644 1671c62... d38d5cc... M  src/gs-shell-extras.c
Comment 4 gnome.vrb 2016-10-17 19:21:26 UTC
Created attachment 337884 [details]
Screenshot after bug fix.