Fix an assert when a codec is not found

When we can't find any results we now return an empty list rather than an error.
Handle this in the various places that look for codecs to prevent a crash.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=772996